--- a/manifest.json
+++ b/manifest.json
@@ -10,12 +10,14 @@
         {
             "src": "img/icons/icon-72x72.png",
             "type": "image/png",
-            "sizes": "72x72"
+            "sizes": "72x72",
+            "purpose": "any maskable"
         },
         {
             "src": "img/icons/icon-96x96.png",
             "type": "image/png",
             "sizes": "96x96"
+            "purpose": "any maskable"
         },
         {
             "src": "img/icons/icon-128x128.png",
@@ -30,7 +32,8 @@
         {
             "src": "img/icons/icon-152x152.png",
             "type": "image/png",
-            "sizes": "152x152"
+            "sizes": "152x152",
+            "purpose": "any maskable"
         },
         {
             "src": "img/icons/icon-192x192.png",
@@ -40,12 +43,14 @@
         {
             "src": "img/icons/icon-384x384.png",
             "type": "image/png",
-            "sizes": "384x384"
+            "sizes": "384x384",
+            "purpose": "any maskable"
         },
         {
             "src": "img/icons/icon-512x512.png",
             "type": "image/png",
-            "sizes": "512x512"
+            "sizes": "512x512",
+            "purpose": "any maskable"
         }
     ]
 }
